staticfiles/css/custom-foundation-styles.css
/* App styles*/
/*Top menu icon*/
.off-canvas-list__link {

}

.off-canvas-list__link_color {
  color: #6e6e6e!important;
}

.logo-text-link {
  text-decoration: none;
}

.logo-text-link_color {
  color: #6E6E6E!important;
}

.logo-text {
  line-height: 0.4!important;
}

.contacts__contact-container {

}
.contact-link {
    display: block;
    text-decoration: none;
    color: #6E6E6E!important;
}
.contact {
  padding: 0 2rem;
}
.contact-icon {
  display: inline;
  float: left;
  height: 1.5em;
  width: 1.5em;
}
.contact-icon_instgrm {
  background: url(http://foto-ruban.ru/static/images/intsagram_icon.png) no-repeat;
  background-size: cover;
}
.contact-icon_phone {
  background: url(http://foto-ruban.ru/static/images/phone_icon.png) no-repeat;
  background-size: cover;
}
.contact-icon_vk {
  background: url(http://static.wixstatic.com/media/51baa9_5126f38ffa914d37866ca0c93d443f2c.png) no-repeat;
  background-size: cover;
}
.contact-icon_fb {
  background: url(http://foto-ruban.ru/static/images/fb_icon.png) no-repeat;
  background-size: cover;
}
.contact-icon_mail {
  background: url(http://foto-ruban.ru/static/images/mail_icon.png) no-repeat;
  background-size: cover;
}

.pop-link {
  display: block;
  text-decoration: none;
  color: #6E6E6E!important;
}

.pop-icon-container {
  padding: 0 2rem;
}

.pop-icon {
  display: inline;
  float: left;
  height: 1.5em;
  width: 1.5em;
}

.pop-icon_home {
  background: url(http://www.clipartbest.com/cliparts/Rcd/Kn4/RcdKn4dMi.png) no-repeat;
  background-size: cover;
}

.pop-icon_totop {
  background: url(https://cdn1.iconfinder.com/data/icons/education-set-7/512/arrow6-up-512.png) no-repeat;
  background-size: cover;
}

.page__content-line {
    padding: 1rem 0 1rem 0;
}

.page__footer-line {
  padding-top: 1rem;
  padding-bottom: 1rem;
}

.page__footer-line_background {
  background-color: #e6e6e6;
}

.copyright-link {
  text-decoration: none;
}

.copyright-text {
  text-align: center;
  margin: 0!important;
  font-size: 0.80rem;
}

.confidential-link {
  text-decoration: none;
}
.confidential {
  display: block;
  width: 100%;
  text-align: center;
  font-size: 0.80rem;
}

.card {
  width: 100%;
  display: block;
  /*margin-bottom: 1rem;*/
}

.card_padding {
  padding: 0 0.25rem 0 0.25rem;
}

.card__link {

}

.card__link_color {
  color: #6e6e6e;
}

.card__link_color:hover, .card__link_color:focus {
  color: #6E6E6E;
}

.card__thumbnail {
display: block;
line-height: 0;
}

.card__thumbnail_border {
  border: solid 4px #fefefe;
  box-shadow: 0 0 0 1px rgba(10, 10, 10, 0.2);
}

.card__thumbnail_margin {
  margin-bottom: 1rem;
}

.card__thumbnail_animation {
  transition: box-shadow 200ms ease-out;
  border-radius: 0;
}
.card__thumbnail_animation:hover, .card__thumbnail_animation:focus {
    box-shadow: 0 0 6px 1px rgba(33, 153, 232, 0.5); }


.card__thumbnail_margin {
  margin: 1rem auto;
}
.card__thumbnail_stack-for-small {
  max-width: 45.5%;
}

.contacts-page__contact-icon {
  display: inline;
  float: left;
  height: 2.5em;
  width: 2.5em;
}

@media screen and (max-width: 39.9375em){
  .card__thumbnail_stack-for-small {
    max-width: 100%!important;
  }
  .card__thumbnail_margin {
    margin: 0!important;
  }
}
.card-thumbnail__image {
  width: 100%;
}

.card-thumbnail__text {

}

.card-thumbnail__text_color {
  color: #6e6e6e;
}

.card-thumbnail__date {
  color: brown;
}

.card-thumbnail__date_font-size-045 {
  font-size: 0.45rem!important;
}

.card-thumbnail__date_font-size-075 {
  font-size: 0.75rem!important;
}

.card-thumbnail__date_font-italic {
  font-style: italic;
}

.card-thumbnail__date_align-right {
  text-align: right;
}

.card-thumbnail__date_margin {
  margin-bottom: 0!important;
}

.card-thumbnail__date_padding {
  padding: 0 0 0.1rem 0;
}

.js-dropdown-menu {
  display: none;
}

.js-dropdown-menu-two {
  display: none;
}

@media screen and (max-width: 64em){
  .card-thumbnail__text {
    font-size: 0.75rem!important;
  }
}

.prices-block {

}

.prices-block_margin-bottom {
  margin-bottom: 1.75rem;
}

.prices-block__caption {
  color: #45688e;
  font-size: inherit;
  font-weight: bold;
}

.prices-block__price {
  font-size: 1rem;
  font-style: italic;
  font-weight: bold;
  text-decoration: underline;
}

.otzivi-text {
  word-wrap: break-word;
}

.otzivi-text_italic {
  font-style: italic;
}

.prices-row_padding-bot {
    padding-bottom : 1em;
}

.paginator {
  text-align: center;
}

.paginator__text {
  display: block-inline;
  padding: 0.4em;
  font-size: 1em;
}

.paginator__link {
  color : #2f2f2f;
}

.paginator__link_active {
  background-color: #e4e4e4;
}
/*App custom styles end*/

